# dex-file-reader

./: DEX-file-reading.ipynb  DEX_Analysis_Tutorial.ipynb  INSTALLATION.md  LICENSE  Makefile  README.md  dex_reader.py  dex_sales_detailed.csv  dex_sales_report.csv  example_usage.py  notebook_requirements.txt  pyproject.toml  setup_notebook.py
.history/: .gitignore_20250813125551  .gitignore_20250813143713  MANIFEST_20250813143452.in  setup_20250813143330.py  test_package_20250813143615.py
dex_reader/: __init__.py  cli.py  core.py
