[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dex-file-reader"
dynamic = ["version"]
description = "A comprehensive tool for parsing and analyzing DEX vending machine log files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["dex", "vending machine", "log parser", "analysis", "sales data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
]
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
notebook = [
    "jupyter>=1.0",
    "matplotlib>=3.3",
    "seaborn>=0.11",
    "plotly>=5.0",
]
full = [
    "jupyter>=1.0",
    "matplotlib>=3.3",
    "seaborn>=0.11",
    "plotly>=5.0",
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/AVJdataminer/dex-file-reader"
Documentation = "https://github.com/AVJdataminer/dex-file-reader#readme"
Repository = "https://github.com/AVJdataminer/dex-file-reader"
"Bug Tracker" = "https://github.com/AVJdataminer/dex-file-reader/issues"

[project.scripts]
dex-reader = "dex_reader.cli:main"

[tool.setuptools]
packages = ["dex_reader"]

[tool.setuptools.package-data]
dex_reader = ["*.txt", "*.md", "*.csv", "*.log"]

[tool.setuptools.dynamic]
version = {attr = "dex_reader.__version__"}
